2013-04-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Knut Schwichtenberg:
	* devtools/ioreg.pl: Add POD (plain old documentation).

2013-04-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (--with-debug-info): New option.
	* devtools/Device.am: Replace hard-coded debug information
	options by CDEBUG or ASDEBUG, respectively.
	* devtools/Architecture.am: (Dito.)
	* doc/api/tools-install.dox: Document the new option here, too.

2013-04-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/findreg.xsl: Dig up EEPROM data, too.
	* devtools/ioreg.pl: Add EEPROM DWARF-2 template.

2013-04-25 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/ioreg.pl: (New file.), contributed by Knut
	Schwichtenberg
	* devtools/findreg.xsl: (New file.)

2013-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: De-POSIXify the shell usage, since
	Solaris' /bin/sh is not POSIX-aware.  For the remaining tools,
	their POSIXish variants can be chosen by prepending the PATH with
	/usr/xpg4/bin (doesn't harm for non-Solaris systems), but as for
	the shell this script is running under, the only other option
	were to let autoconf detect it, which is a bit of overkill.

2013-03-29 Mike Rice <mike@mikerice.name>

	* libc/time: (New directory.)
	* include/time.h: (New file.)
	* include/util/eu_dst.h: (New file.)
	* include/util/usa_dst.h: (New file.)

2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Add ATmega64RFR2, ATmega644RFR2,
	ATmega128RFR2, ATmega1284RFR2, ATmega256RFR2, ATmega2564RFR2
	* configure.ac: (Dito.)
	* doc/api/main_page.dox: Document new device support.
	* doc/api/using-tools.dox: (Dito.)
	* include/avr/io.h: Add hooks for ATmega*RFR2 devices.
	* include/avr/Makefile.am (avr_HEADERS): Add new header files.
	* include/avr/sleep.h: Add sleep modes for ATmega*RFR2 devices.
	* include/avr/wdt.h: Add watchdog support for ATmega*RFR2 devices.
	* include/avr/power.h: Add power management definitions for